# backtothefuturekitchen

./: .buildinfo  .flake8  .gitattributes  .gitignore  .pydocstyle  ANALYSE_STRUCTURE_DOCKER.md  ANALYSE_SYNC_PREPROD_PROD.md  BRIEF_DESIGN_STREAMLIT.md  CHANGELOG.md  CONVENTIONS.md  INVENTAIRE_DOCUMENTATION_CI_CD.md  LICENSE  RAF_EVALUATION.md  README-S3.md  README.md  README.md.bak  README_CHARTE_GRAPHIQUE.md  README_CI_CD.md  README_COVERAGE.md  README_TESTS.md  RESUME_COVERAGE_FINAL.md  RUNNER_DISCORD_GUIDE.md  S3_INSTALL.md  SESSION_2025-10-25_DOCUMENTATION.md  SYNTHESE_CI_CD_ACADEMIC.md  TODO_GLOBAL.md  TODO_LOGGING_REFACTORING.md  TODO_POO_REFACTORING.md  deploy_preprod_to_prod.sh  deploy_prod.sh  genindex.html  index.html  init-preprod-state.sh  main.py  objects.inv  py-modindex.html  run_ci_checks.sh  search.html  searchindex.js  test-deploy-1761430023.txt  (+2 more)
.doctrees/: index.doctree
00_eda/: 00_data_utils.ipynb  README  SYNTHESE_COMPLETE_ANALYSES.ipynb  data_utils.py  main.py  pyproject.toml  test_s3_connection.py  test_s3_loading.py
00_eda/00_eda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
00_eda/01_long_term/: 01_ingredient_rating_analysis.ipynb  01_rating_analysis.ipynb  01_recipe_analysis.ipynb
00_eda/01_long_term/rating_ingredient/: 01_ingredient_rating_analysis.ipynb  01_rating_analysis.ipynb
00_eda/01_long_term/recipe/: 01_recipe_analysis_trendline.ipynb  01_tocheck.ipynb  recipe_analysis_trendline.ipynb  recipe_analysis_trendline_clean.py  show_all_graphs.py
00_eda/02_seasonality/: 02_ingredient_rating_analysis.ipynb  02_rating_analysis.ipynb
00_eda/02_seasonality/rating_ingredient/: 02_ingredient_rating_analysis.ipynb  02_rating_analysis.ipynb
00_eda/02_seasonality/recipe/: 01_recipe_analysis.ipynb  recipe_analysis_seasonality.ipynb
00_eda/03_week_end_effect/: 01_recipe_analysis copy.ipynb  03_ingredient_rating_analysis.ipynb  03_rating_analysis.ipynb
00_eda/03_week_end_effect/rating_ingredient/: 03_ingredient_rating_analysis.ipynb  03_rating_analysis.ipynb
00_eda/03_week_end_effect/recipe/: recipe_analysis_weekend.ipynb
00_eda/09_integration/: CHARTE_GRAPHIQUE_GUIDE.md  NOTES_INTEGRATION.md  PROGRESSION_INTEGRATION.md  README.md  RECAPITULATIF_FINAL.md  analyse_ratings_simple_clean.py  integration_strategies.md  rating_analysis_integration.py  recipe_analysis_integration.py
00_eda/_data_utils/: DEMO_recipes.py  __init__.py  _data_utils.ipynb  data_utils_common.py  data_utils_ratings.py  data_utils_recipes.py  data_utils_recipes_ratings.py  data_utils_recipes_recipes.py  pyproject.toml
00_preprod/: .github_workflows_ci.yml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  utils_logger.py
100_preprod/: .env.example  .gitignore
10_preprod/: CHARTE_GRAPHIQUE.md  COMMANDES.md  GUIDE_INTEGRATION_ANALYSES.md  README.md  ROADMAP.md  create_favicon.py  models_database.py  pyproject.toml  requirements.txt  test_streamlit_extras.py  utils_logger.py  utils_s3.py
10_preprod/.streamlit/: config.toml
10_preprod/archive_visualisations_innovantes/: 5_🚀_Visualisations_Innovantes.py  innovative_charts.py  test_radar_debug.py
10_preprod/src/mangetamain_analytics/: __init__.py  exceptions.py  main.py  notebook_to_streamlit_guide.md
10_preprod/src/mangetamain_analytics/assets/: custom.css
10_preprod/src/mangetamain_analytics/data/: cached_loaders.py  loaders.py
10_preprod/src/mangetamain_analytics/i18n/: __init__.py  language_selector.py  translations.py  translations_charts.py
10_preprod/src/mangetamain_analytics/pages/: 5_🚀_Visualisations_Innovantes.py
10_preprod/src/mangetamain_analytics/utils/: __init__.py  chart_theme.py  color_theme.py  colors.py  environment.py  i18n_helper.py
10_preprod/src/mangetamain_analytics/visualization/: analyse_ratings.py  analyse_ratings_simple.py  analyse_seasonality.py  analyse_trendlines.py  analyse_trendlines_v2.py  analyse_weekend.py  custom_charts.py  innovative_charts.py  plotly_config.py
10_preprod/tests/unit/: test_analyse_ratings.py  test_analyse_ratings_simple.py  test_analyse_seasonality.py  test_analyse_trendlines.py  test_analyse_trendlines_v2.py  test_analyse_weekend.py  test_cached_loaders.py  test_chart_theme.py  test_color_theme.py  test_colors.py  test_custom_charts.py  test_environment.py  test_exceptions.py  test_loaders.py  test_logger_config.py
10_prod/: pyproject.toml
202_prod/: README.md
20_prod/: README.md  README_COVERAGE.md  README_TESTS.md  pyproject.toml
20_prod/streamlit/: main.py
20_prod/streamlit/data/: loaders.py
20_prod/tests/: __init__.py
20_prod/tests/unit/: test_loaders.py  test_main.py
20_prod/utils/: __init__.py  utils_s3.py
300_docker/: README_DOCKER.md  docker-compose-prod.yml
30_docker/: .env.example  docker-compose-preprod.yml  docker-compose-preprod.yml.backup  docker-compose-prod.yml  docker-compose.yml  docker-compose.yml.backup
40_utils/mangetamain_data_utils/: README_TESTS.md  pyproject.toml
40_utils/mangetamain_data_utils/src/mangetamain_data_utils/: __init__.py  data_utils_recipes.py
40_utils/mangetamain_data_utils/tests/: test_data_utils_common.py
50_test/: .gitignore  README.md  README_TESTS.md  S3_duckdb_test.py  S3_duckdb_test.py.backup  main.py  pyproject.toml  test_s3_parquet_files.py  test_sql_queries.py
70_scripts/: deploy_preprod_to_prod.sh  deploy_prod.sh  run_ci_checks.sh
90_doc/: CHANGELOG_DOC.md  README.md  RESUME_ALL_20251002_V01.md  RESUME_FINAL_20250930.md  RESUME_PREPROD_20250930_V01.md  RESUME_PREPROD_20250930_V02.md  RESUME_PREPROD_20250930_V03.md  requirements.txt
_archive/: GUIDE_DUCKDB_S3.md  PERFORMANCE_S3_FINAL.md
_modules/: index.html
_static/: documentation_options.js
en/: application.html  architecture.html  cicd.html  conformite.html  faq.html  glossaire.html  index.html  installation.html  projet.html  quickstart.html  s3.html  tests.html  usage.html
fr/: application.html  architecture.html  cicd.html  conformite.html  faq.html  glossaire.html  index.html  installation.html  projet.html  quickstart.html  s3.html  tests.html  usage.html
(+180 files in other folders)
