[project]
name = "00-eda"
version = "0.1.0"
description = "Back to the Future Kitchen — EDA Food.com dataset"
requires-python = ">=3.10"

dependencies = [
    "boto3>=1.40.47",
    "duckdb>=1.4.1",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["_data_utils"]
