[project]
name = "mangetamain-analytics"
version = "0.1.0"
description = "Application web d'analyse de données pour Mangetamain"
authors = [{name = "Votre équipe", email = "email@example.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit>=1.28.0",
    "duckdb>=1.4.1",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "numpy>=2.3.3",
    "altair>=5.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "seaborn>=0.13.2",
    "boto3>=1.40.47",
    # Nouvelles dépendances pour analyses EDA - Antoine
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "polars>=1.34.0",
    "pyarrow==18.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.0",
    # Package data-utils local (40_utils) - chemin absolu car chemins relatifs ne marchent pas avec uv
    "mangetamain-data-utils @ file:///home/julien/code/mangetamain/000_dev/40_utils/mangetamain_data_utils",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "pydocstyle>=6.3.0",
    "mypy>=1.6.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
    "*/main.py",
    "*/pages/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
