[project]
name = "mangetamain-analytics"
version = "0.1.0"
description = "Application web d'analyse de données pour Mangetamain"
authors = [{name = "Votre équipe", email = "email@example.com"}]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "streamlit>=1.28.0",
    "duckdb>=0.9.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
    "altair>=5.0.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
    "seaborn>=0.13.2",
    "boto3>=1.40.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "pydocstyle>=6.3.0",
    "mypy>=1.6.0",
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=1.3.0",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["streamlit"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=streamlit --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
    "streamlit/main.py",
    "streamlit/pages/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
