[project]
name = "50-test"
version = "0.1.0"
description = "Tests S3 parquet files accessibility"
requires-python = ">=3.13.3"
dependencies = [
    "boto3>=1.40.48",
    "duckdb>=1.4.1",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pandas>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
py-modules = []

[tool.setuptools.package-data]
"*" = []

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py", "S3_duckdb_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/tests/*",
    "*/test_*.py",
    "S3_duckdb_test.py",
    "coverage_html/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if False:",
]
precision = 2
skip_empty = true
