[project]
name = "mangetamain-data-utils"
version = "0.1.0"
description = "Utilitaires de chargement et nettoyage des données Mangetamain"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "duckdb>=1.4.1",
    "polars>=1.34.0",
    "pandas>=2.3.3",
    "numpy>=2.3.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mangetamain_data_utils"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=. --cov-report=html --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
omit = [
    "*/__pycache__/*",
    "*/.venv/*",
    "*/tests/*",
    "*/_data_utils.ipynb",
    "__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
